--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-welcome to htapi
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="refresh" content="0;url=/api/m.php">
+    <title>welcome to htapi</title>
+</head>
+<body>
+    <p>welcome to htapi</p>
+</body>
+</html>
