--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="refresh" content="0;url=/api/m.php">
-    <title>welcome to htapi</title>
+    <title>welcome to htapi by 2ui</title>
 </head>
 <body>
-    <p>welcome to htapi</p>
+    <p>welcome to htapi<br>正在加载历史上的今天...</p>
 </body>
 </html>
