--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
   <div class="container">
     <h1 class="title">历史上的今天</h1>
     <p class="description" style="text-align:center">此网站由2ui制作，数据来源百度百科，开放源码，可以做修改</p>
-    <a href="m.php" class="button">历史上的今天网页版</a>
+    <a href="api/m.php" class="button">历史上的今天网页版</a>
     <a href="javascript:alert('在这里添加你的QR')" class="button">微信公众号</a><br>
     <a href="https://github.com/mycurjerry/htapi" class="github-button">Visit on GitHub</a>
   </div>
